--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,8 +1,8 @@
-@import "./_mixins.scss";
-@import "./_variables.scss";
+@use "@/styles/_mixins" as *;
+@use "@/styles/_variables" as *;
 
 .page {
-  @include flex-center;
+  @include flex-center-col;
   width: 100vw;
   height: 100vh;
 }
