--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,4 +2,5 @@ $primary-color: #0051ff;
 $shadow-color: #00000040;
 $text-color: #5b5b5b;
 $border-color: #cfcece;
+$placeholder-color: #a7a5a5;
 $radius: 10px;
