--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,8 @@
 $primary-color: #0051ff;
+$primary-color-light: #0051ff1a;
 $shadow-color: #00000040;
 $text-color: #5b5b5b;
 $border-color: #cfcece;
 $placeholder-color: #a7a5a5;
+$disabled-color: #e8e8e8a5;
 $radius: 10px;
