--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -5,4 +5,19 @@
   @include flex-center-col;
   width: 100vw;
   height: 100vh;
+  .boxContainer{
+    @include flex-center-col;
+    min-height: 200px;
+    width:100%;
+    max-width: 700px;
+    padding: 0px 20px;
+    border: 1px solid $border-color;
+    border-radius: $radius;
+    padding: 20px;
+    .form{
+      @include flex-center-col;
+      width: 100%;
+      margin-bottom: 20px;
+    }
+  }
 }
